--- a/arch/arm64/configs/cherry-pine_defconfig
+++ b/arch/arm64/configs/cherry-pine_defconfig
@@ -706,3 +706,6 @@ CONFIG_DEFAULT_IOSCHED="anxiety"
 # Kcal/Klapse
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_KLAPSE=y
+
+# Autocut
+CONFIG_AUTOCUT_CHARGER=y
