--- a/arch/arm64/configs/cherry-pine_defconfig
+++ b/arch/arm64/configs/cherry-pine_defconfig
@@ -249,7 +249,6 @@ CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_CMA=y
 CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP=y
@@ -261,7 +260,6 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_SIMTRAY_STATUS=y
 CONFIG_HQ_SYSFS_SUPPORT=y
 CONFIG_FPR_FPC=y
-CONFIG_MI_FS=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
@@ -476,8 +474,6 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_DUAL_ROLE_USB_INTF=y
 CONFIG_USB_GADGET=y
-CONFIG_USB_GADGET_DEBUG_FILES=y
-CONFIG_USB_GADGET_DEBUG_FS=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_CI13XXX_MSM=y
 CONFIG_USB_CONFIGFS=y
@@ -642,7 +638,6 @@ CONFIG_PSTORE_RAM=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DEBUG_INFO=y
 CONFIG_STRIP_ASM_SYMS=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x0
@@ -732,3 +727,6 @@ CONFIG_DYNAMIC_FSYNC=y
 CONFIG_NETFILTER_XT_TARGET_HL=y
 CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_NETFILTER_ADVANCED=y
+
+# Shrink kernel size
+CONFIG_TRIM_UNUSED_KSYMS=y
