ARM64: defconfig: force /dev/urandom

--- a/arch/arm64/configs/cherry-sdm439_defconfig
+++ b/arch/arm64/configs/cherry-sdm439_defconfig
@@ -749,3 +749,6 @@ CONFIG_MSDOS_FS=y
 CONFIG_OVERLAY_FS=y
 CONFIG_PM_DEBUG=y
 CONFIG_TASK_DELAY_ACCT=y
+
+# Force /dev/urandom
+CONFIG_RANDOM_FORCE_URANDOM=y
