--- a/arch/arm64/configs/cherry-sdm439_defconfig
+++ b/arch/arm64/configs/cherry-sdm439_defconfig
@@ -693,3 +693,6 @@ CONFIG_TCP_CONG_VEGAS=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
+
+# CPU governors
+CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
