--- a/arch/arm64/configs/cherry-olive_defconfig
+++ b/arch/arm64/configs/cherry-olive_defconfig
@@ -25,6 +25,7 @@ CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_RT_GROUP_SCHED=y
+CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_BPF=y
 CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
@@ -695,3 +696,7 @@ CONFIG_DEFAULT_TCP_CONG="westwood"
 
 # CPU governors
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+
+# I/O schedulers
+CONFIG_IOSCHED_BFQ=y
+CONFIG_BFQ_GROUP_IOSCHED=y
