--- a/arch/arm64/configs/cherry-pine_defconfig
+++ b/arch/arm64/configs/cherry-pine_defconfig
@@ -697,3 +697,4 @@ CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_MAPLE=y
