defconfig: enable anxiety scheduler
... and set as default.

--- a/arch/arm64/configs/cherry-pine_defconfig
+++ b/arch/arm64/configs/cherry-pine_defconfig
@@ -698,3 +698,6 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_ANXIETY=y
+CONFIG_DEFAULT_ANXIETY=y
+CONFIG_DEFAULT_IOSCHED="anxiety"
