--- a/arch/arm64/configs/cherry-olive_defconfig
+++ b/arch/arm64/configs/cherry-olive_defconfig
@@ -706,3 +706,7 @@ CONFIG_IOSCHED_ANXIETY=y
 CONFIG_DEFAULT_ANXIETY=y
 CONFIG_DEFAULT_IOSCHED="anxiety"
 
+# Kcal/Klapse
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_KLAPSE=y
+
