--- a/arch/arm64/configs/cherry-pine_defconfig
+++ b/arch/arm64/configs/cherry-pine_defconfig
@@ -701,3 +701,7 @@ CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_DEFAULT_ANXIETY=y
 CONFIG_DEFAULT_IOSCHED="anxiety"
+
+# Kcal/Klapse
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_KLAPSE=y
