defconfig: add Google's recommendations

--- a/arch/arm64/configs/cherry-pine_defconfig
+++ b/arch/arm64/configs/cherry-pine_defconfig
@@ -730,3 +730,20 @@ CONFIG_NETFILTER_ADVANCED=y
 
 # Shrink kernel size
 CONFIG_TRIM_UNUSED_KSYMS=y
+
+# Google's recommendations
+CONFIG_NET_IPGRE_DEMUX=y
+CONFIG_NET_SCH_INGRESS=y
+CONFIG_PPTP=y
+CONFIG_XFRM_INTERFACE=y
+CONFIG_KSM=y
+CONFIG_DM_BOW=y
+CONFIG_HIDRAW=y
+CONFIG_INPUT_GPIO=y
+CONFIG_JOYSTICK_XPAD=y
+CONFIG_JOYSTICK_XPAD_FF=y
+CONFIG_JOYSTICK_XPAD_LEDS=y
+CONFIG_MSDOS_FS=y
+CONFIG_OVERLAY_FS=y
+CONFIG_PM_DEBUG=y
+CONFIG_TASK_DELAY_ACCT=y
