--- a/arch/arm64/configs/cherry-sdm439_defconfig
+++ b/arch/arm64/configs/cherry-sdm439_defconfig
@@ -41,7 +41,7 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_LZ4 is not set
 CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
-# CONFIG_MEMBARRIER is not set
+CONFIG_MEMBARRIER=y
 CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 # CONFIG_COMPAT_BRK is not set
@@ -734,3 +734,20 @@ CONFIG_NETFILTER_ADVANCED=y
 
 # Shrink kernel size
 CONFIG_TRIM_UNUSED_KSYMS=y
+
+# Google's recommendations
+CONFIG_NET_IPGRE_DEMUX=y
+CONFIG_NET_SCH_INGRESS=y
+CONFIG_PPTP=y
+CONFIG_XFRM_INTERFACE=y
+CONFIG_KSM=y
+CONFIG_DM_BOW=y
+CONFIG_HIDRAW=y
+CONFIG_INPUT_GPIO=y
+CONFIG_JOYSTICK_XPAD=y
+CONFIG_JOYSTICK_XPAD_FF=y
+CONFIG_JOYSTICK_XPAD_LEDS=y
+CONFIG_MSDOS_FS=y
+CONFIG_OVERLAY_FS=y
+CONFIG_PM_DEBUG=y
+CONFIG_TASK_DELAY_ACCT=y
