--- a/arch/arm64/configs/cherry-olive_defconfig
+++ b/arch/arm64/configs/cherry-olive_defconfig
@@ -689,6 +689,7 @@ CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PIXUTIL=y
 CONFIG_CPU_FREQ_GOV_ENERGY_DCFC=y
+CONFIG_CPU_FREQ_GOV_PIXEL_SMURFUTIL=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PIXUTIL=y
 
 # I/O schedulers
