--- a/arch/arm64/configs/cherry-olive_defconfig
+++ b/arch/arm64/configs/cherry-olive_defconfig
@@ -32,7 +32,6 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_SCHED_TUNE=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
@@ -751,3 +750,7 @@ CONFIG_TASK_DELAY_ACCT=y
 
 # Force /dev/urandom
 CONFIG_RANDOM_FORCE_URANDOM=y
+
+# UClamp
+CONFIG_UCLAMP_TASK=y
+CONFIG_UCLAMP_TASK_GROUP=y
